crates/pawdoku/tests/snapshots/snapshots__snapshot_the_search_of_a_puzzle_that_needs_a_guess.snap
---
source: crates/pawdoku/tests/snapshots.rs
expression: render_search(NEEDS_A_GUESS)
---
givens
4.....8.5
.3.......
...7.....
.2.....6.
....8.4..
....1....
...6.3.7.
5..2.....
1.4......

verdict: OneSolution
guesses: 50

solution 1
417369825
632158947
958724316
825437169
791586432
346912758
289643571
573291684
164875293
