crates/pawdoku/tests/snapshots/snapshots__snapshot_the_search_of_givens_with_two_solutions.snap
---
source: crates/pawdoku/tests/snapshots.rs
expression: render_search(TWO_SOLUTIONS)
---
givens
53..7....
6..195...
.98......
8...6...3
4..8.3..1
7...2...6
.6....28.
...419..5
....8..79

verdict: Many
guesses: 1

solution 1
534678912
672195348
198342567
859761423
426853791
713924856
961537284
287419635
345286179

solution 2
534678912
672195438
198342657
819764523
426853791
753921846
961537284
287419365
345286179
